--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,36 @@ main {
   order: 2;
 }
 
-.container-example1 .item5 {
-  order: 1;
+
+.container-example2 {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
+  grid-template-rows: minmax(80px, auto);
+  grid-gap: 2px;
+  grid-auto-flow: dense;
+}
+
+.container-example2 .box {
+  text-align: center;
+  border: solid 1px black;
+  padding: 20px;
+  order: 2;
+  border-radius: 4px;
+}
+.m {
+  grid-row: 2;
+  grid-column: 1 / -1;
+}
+.a {
+  grid-column-end: span 2;
+  grid-row-end: span 2;
+}
+
+.j {
+  grid-column-end: span 3;
+  grid-row-end: span 3;
+}
+
+.d {
+  grid-row-end: span 4;
 }
